# gzip-json

./: README.md  pyproject.toml
src/: __init__.py  exceptions.py  gzip_json.py
